--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ plugins {
 }
 
 dependencies {
-    // JUnit 4 framework for unit tests
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+    testImplementation 'org.mockito:mockito-core:3.11.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 }
 
